--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,6 @@ body{
     margin: 0 auto;
     background-color: #2b0f0f;
     padding: 40px;
-    border-left: #000 5px;
-    border-right: #000 5px;
 }
 .paragraph:hover{
     border: #fff dotted 1px;
@@ -19,8 +17,8 @@ h1{
     background-color: black;
     border: #fff, solid, 3px;
     border-radius: 15px;
-    padding: 10px;
-    width: 70%;
+    padding: 10px 0px;
+    width: 50%;
     text-align: center;
     margin: 0px auto;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -40,7 +38,7 @@ p{
 img{
     float: right;
     width: 30%;
-    border: #fff solid 2px;
+    border: #fff solid 1px;
     margin-left: 25px;
 }
 a:link{
