updated some colors

--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,18 @@
 body{
     background-color: #1c80b1;
-    color: #ffffff;
+    color: #000000;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     margin: 0;
 }
 #container{
     width: 1100px;
     margin: 0 auto;
-    background-color: #120e89;
+    background-color: #51c2dc;
     padding: 40px;
 }
-.paragraph:hover{
-    background-color: #1414ff;
-}
 h1{
-    background-color: black;
-    border: #fff, solid, 3px;
+    background-color: rgb(255, 255, 255);
+    border: #000000, solid, 3px;
     border-radius: 15px;
     padding: 10px 0px;
     width: 50%;
@@ -40,12 +37,14 @@ img{
     width: 150px;
     border: #fff solid 1px;
     margin-left: 25px;
+    margin-right: 10px;
+    border-radius: 15px
 }
 a:link{
-    color: #00ffff;
+    color: #00702b;
 }
 a:visited{
-    color: #007979
+    color: #494d00
 }
 a:hover{
     color: #ec00d1
@@ -55,8 +54,8 @@ a:active{
 }
 #pic2{
     float: right;
-    margin-left: 25px;
-    margin-right: 0;
+    margin-left: 10px;
+    margin-right: 25px;
 }
 .highlight{
     font-weight: 200;
@@ -65,7 +64,7 @@ a:active{
     color: #000;
 }
 #sidebar{
-    background-color: #20003a;
+    background-color: #a998fe;
     width: 225px;
     float: right;
     border: 2px solid white;
