--- a/styles.css
+++ b/styles.css
@@ -208,7 +208,7 @@ a:active{
 }
 @media (max-width: 1200px){
     #container{
-        width: 800px !important;
+        max-width: 800px;
     }
 }
 @media (max-width: 992px){
