--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,8 @@ html {
     height: 100%;
 }
 #container{
-    width: 1100px;
+    width: 100%;
+    max-width: 1100px;
     margin: 0 auto;
     background-color: #51c2dc;
     padding: 40px;
